[tool.poetry]
name = "addition-app"
version = "0.1.0"
description = ""
authors = ["Amila <amila.de@lexisnexisrisk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
sphinx = "^8.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
